--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./index.css">
+    <!-- Google Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>YouTube Remake</title>
 
 </head>
@@ -29,14 +31,16 @@
                 <table>
                     <tr>
                         <td>
-                            <div id="upload"><i class="fas fa-2x fa-arrow-circle-up"></i></div>
-                        </td>
-                        <td><img src="./apps menu icon .png" alt="" id="apps-menu-icon"></td>
-                        <td>
-                            <div id="setting"><i class="fas fa-2x fa-bell"></i></div>
+                            <span class="material-icons">video_call</span>
                         </td>
                         <td>
-                            <div id="profile"><i class="fas fa-2x fa-user-circle"></i></div>
+                            <span class="material-icons">widgets</span>
+                        </td>
+                        <td>
+                            <span class="material-icons">notifications</span>
+                        </td>
+                        <td>
+                            <span class="material-icons">account_circle</span>
                         </td>
                     </tr>
                 </table>
@@ -205,7 +209,7 @@
                         <div class="container">
                             <span class="material-icons watchLater hideI">watch_later</span>
                             <div class="thumbnail"
-                                style="background-image: url(https://i.ytimg.com/vi/Y4ALU0B561g/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLB1mOyIqRe4EfQnjS94Hts3cUCA1A)">
+                                style="background-image: url(http://i3.ytimg.com/vi/mXf3Klcn-sM/maxresdefault.jpg)">
                             </div>
                             <div class="label">
                                 <img class="badge"
